# poetry2nix-simple-numpy-failure

./: flake.nix  pyproject.toml
tests/: .test_foo.py.swp  test_foo.py
