[tool.poetry]
name = "numpy-debug"
version = "0.1.0"
description = ""
authors = ["George Macon <George.Macon@gtri.gatech.edu>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "1.23.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi-simple"
url = "https://pypi.org/simple"
default = true
